# libsox-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: bin.rs  encodinginfo.rs  format.rs  lib.rs  raw.rs  signalinfo.rs  wrapper.h
