[package]
name = "libsox-rs"
version = "0.1.0"
authors = ["Adam Harries <harries.adam@gmail.com>"]
build = "build.rs"

[lib]
name = "libsox"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin.rs"

[dependencies]
once = "*"
byteorder = "1"
time = "*"
rayon = "1.0"

[build-dependencies]
bindgen = "0.37.0"